--- a/public/sass/abstracts/_mixins.scss
+++ b/public/sass/abstracts/_mixins.scss
@@ -26,6 +26,9 @@
   @if $breakpoint == tab-land {
     @media only screen and (max-width: 75em) { @content }; // 1200px
   }
+  @if $breakpoint == medium-desktop {
+    @media only screen and (max-width: 87.5em) { @content }; // 1400px
+  }
   @if $breakpoint == big-desktop {
     @media only screen and (max-width: 112.5em) { @content }; // 1800px
   }
