--- a/public/sass/layouts/_projects.scss
+++ b/public/sass/layouts/_projects.scss
@@ -3,7 +3,7 @@
   grid-template-columns: 1fr 1fr 1fr;
   gap: 1.5rem;
 
-  @media (max-width: 1200px) {
+  @include respond(medium-desktop) {
     grid-template-columns: 1fr;
   }
 }
